# vision_skier

./: README.md  classification.py  clip.py  main.py  pyproject.toml
config/: data.yaml
src/data_utils/: data_transforms.py  dataloader.py  imagenet10_class.py  tiny_imagenet_class.py
src/loss/: contrastive_loss.py
src/models/: __init__.py  dla.py  dla_simple.py  dpn.py  efficientnet.py  mobilenet.py  mobilenetv2.py  model_builder.py  nano_clip_models.py  pnasnet.py  resnet.py  resnext.py  shufflenet.py  shufflenetv2.py  toy_clip_models.py
